--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,7 +1,7 @@
 {% include base_path %}
 
 <!-- start custom head snippets -->
-
+<meta name="google-site-verification" content="1wTUZZO_6vDrVoTMiRGlw2qGpVeUPAhzecP5JrhotKM" />
 <link rel="apple-touch-icon" sizes="57x57" href="{{ base_path }}/images/apple-touch-icon-57x57.png?v=M44lzPylqQ">
 <link rel="apple-touch-icon" sizes="60x60" href="{{ base_path }}/images/apple-touch-icon-60x60.png?v=M44lzPylqQ">
 <link rel="apple-touch-icon" sizes="72x72" href="{{ base_path }}/images/apple-touch-icon-72x72.png?v=M44lzPylqQ">
