--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -10,7 +10,7 @@
     {% if author.avatar contains "://" %}
     	<img src="{{ author.avatar }}" alt="{{ author.name }}">
     {% else %}
-    	<img src="{{ author.avatar | prepend: "/images/" | prepend: base_path }}" class="author__avatar" alt="{{ author.name }}">
+    <a href="{{ author.avatar | prepend: "/images/" | prepend: base_path }}"><img src="{{ author.avatar | prepend: "/images/" | prepend: base_path }}" class="author__avatar" alt="{{ author.name }}"></a>
     {% endif %}
   </div>
 
